XMLExper/m12/m12_438_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual tinyxml2::XMLNode* tinyxml2::XMLComment::ShallowClone(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:1325:56: error: lvalue required as left operand of assignment
 1325 |         /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(doc) = _document;
      |                                                        ^~~~~~~~~
diff: tinyxml2.S: No such file or directory
